[gd_scene load_steps=4 format=3 uid="uid://bubo78mrq757p"]

[ext_resource type="Script" uid="uid://q0ecficwqdd3" path="res://enemy.gd" id="1_7k104"]

[sub_resource type="CircleShape2D" id="CircleShape2D_body"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hitbox"]
radius = 20.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_7k104")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_body")

[node name="HitboxArea2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea2D"]
shape = SubResource("CircleShape2D_hitbox")

[node name="DetectionArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AttackTimer" type="Timer" parent="."]

[node name="HitFlashTimer" type="Timer" parent="."]
