extends CharacterBody2D

# ===== DADOS DO INIMIGO =====
@export var enemy_data: Enemy_Data

# ===== COMPONENTES =====
@onready var sprite: AnimatedSprite2D = $AnimatedSprite2D
@onready var collision_shape: CollisionShape2D = $CollisionShape2D
@onready var hitbox_area: Area2D = $HitboxArea2D
@onready var detection_area: Area2D = $DetectionArea2D
@onready var attack_timer: Timer = $AttackTimer
@onready var hit_flash_timer: Timer = $HitFlashTimer

# ===== ESTADO =====
var current_health: float
var target: Node2D = null
var can_attack: bool = true
var is_dead: bool = false

# ===== ESTADOS DO INIMIGO =====
enum State { IDLE, CHASE, ATTACK, HURT, DEAD }
var current_state: State = State.IDLE


func _ready() -> void:
	add_to_group("enemies")
	print("[ENEMY] Inicializado e adicionado ao grupo 'enemies'")
	
	if enemy_data:
		print("[ENEMY] Carregando dados: ", enemy_data.enemy_name)
		setup_enemy()
	else:
		push_error("Enemy_Data not assigned!")
		print("[ENEMY] ‚ùå ERRO: Enemy_Data n√£o atribu√≠do!")
		queue_free()


func setup_enemy() -> void:
	print("[ENEMY] ‚öôÔ∏è Configurando inimigo...")
	
	# Inicializa health
	current_health = enemy_data.max_health
	print("[ENEMY]    HP: %.1f/%.1f" % [current_health, enemy_data.max_health])
	print("[ENEMY]    Dano: %.1f | Defesa: %.1f" % [enemy_data.damage, enemy_data.defense])
	print("[ENEMY]    Velocidade: %.1f" % enemy_data.move_speed)
	print("[ENEMY]    Chase Range: %.1f | Attack Range: %.1f" % [enemy_data.chase_range, enemy_data.attack_range])
	
	# Configura sprite
	if sprite and enemy_data.sprite_frames:
		sprite.sprite_frames = enemy_data.sprite_frames
		sprite.scale = enemy_data.sprite_scale
		if enemy_data.animation_name != "":
			sprite.play(enemy_data.animation_name)
		print("[ENEMY]    Sprite configurado (scale: ", enemy_data.sprite_scale, ")")
	
	# Configura colis√£o do corpo
	if collision_shape and enemy_data.collision_shape:
		collision_shape.shape = enemy_data.collision_shape
		print("[ENEMY]    CollisionShape configurado")
	
	# Configura hitbox (√°rea que causa dano ao player)
	if hitbox_area and enemy_data.hitbox_shape:
		print("[ENEMY]    Configurando Hitbox...")
		print("[ENEMY]       Collision Layer ANTES: ", hitbox_area.collision_layer)
		print("[ENEMY]       Collision Mask ANTES: ", hitbox_area.collision_mask)
		print("[ENEMY]       Monitoring ANTES: ", hitbox_area.monitoring)
		
		var hitbox_collision = CollisionShape2D.new()
		hitbox_collision.shape = enemy_data.hitbox_shape
		hitbox_area.add_child(hitbox_collision)
		hitbox_area.body_entered.connect(_on_hitbox_body_entered)
		
		print("[ENEMY]    Hitbox configurada")
		print("[ENEMY]       Layer: ", hitbox_area.collision_layer, " (bin√°rio: ", String.num_int64(hitbox_area.collision_layer, 2), ")")
		print("[ENEMY]       Mask: ", hitbox_area.collision_mask, " (bin√°rio: ", String.num_int64(hitbox_area.collision_mask, 2), ")")
		print("[ENEMY]       Monitoring: ", hitbox_area.monitoring)
		print("[ENEMY]       Shape tipo: ", hitbox_collision.shape.get_class())
	
	# Configura √°rea de detec√ß√£o
	if detection_area:
		print("[ENEMY]    Configurando DetectionArea...")
		print("[ENEMY]       Collision Layer ANTES: ", detection_area.collision_layer)
		print("[ENEMY]       Collision Mask ANTES: ", detection_area.collision_mask)
		print("[ENEMY]       Monitoring ANTES: ", detection_area.monitoring)
		
		var detection_shape = CollisionShape2D.new()
		var circle = CircleShape2D.new()
		circle.radius = enemy_data.chase_range
		detection_shape.shape = circle
		detection_area.add_child(detection_shape)
		
		print("[ENEMY]       Shape radius: ", circle.radius)
		print("[ENEMY]       Shape adicionado como filho")
		
		detection_area.body_entered.connect(_on_detection_body_entered)
		detection_area.body_exited.connect(_on_detection_body_exited)
		print("[ENEMY]       Signals conectados")
		
		print("[ENEMY]    DetectionArea configurada (radius: %.1f)" % enemy_data.chase_range)
		print("[ENEMY]    DetectionArea - Layer: %d, Mask: %d" % [detection_area.collision_layer, detection_area.collision_mask])
		print("[ENEMY]    DetectionArea - Monitoring: %s" % detection_area.monitoring)
		print("[ENEMY]    DetectionArea - Monitorable: %s" % detection_area.monitorable)
		
		# Debug: verifica se j√° existe algum corpo na √°rea
		await get_tree().process_frame  # Espera 1 frame para collision shape estar pronta
		print("[ENEMY]    ‚è≥ Aguardou 1 frame, verificando overlaps...")
		var bodies_in_area = detection_area.get_overlapping_bodies()
		print("[ENEMY]    üîç Corpos j√° na √°rea de detec√ß√£o: ", bodies_in_area.size())
		for body in bodies_in_area:
			print("[ENEMY]       - ", body.name, " (tipo: ", body.get_class(), ", grupos: ", body.get_groups(), ")")
			if body.is_in_group("player"):
				print("[ENEMY]       ‚úÖ PLAYER DETECTADO no _ready()!")
				target = body
				if current_state == State.IDLE:
					current_state = State.CHASE
					print("[ENEMY]       Estado: IDLE ‚Üí CHASE")
		
		# Debug: Busca manual do player e calcula dist√¢ncia
		print("[ENEMY]    üîç Verifica√ß√£o manual de dist√¢ncia...")
		print("[ENEMY]       Posi√ß√£o global do Enemy: ", global_position)
		print("[ENEMY]       Posi√ß√£o global da DetectionArea: ", detection_area.global_position)
		print("[ENEMY]       Posi√ß√£o local da DetectionArea: ", detection_area.position)
		var players = get_tree().get_nodes_in_group("player")
		print("[ENEMY]       Players no grupo: ", players.size())
		if players.size() > 0:
			var player = players[0]
			var distance = global_position.distance_to(player.global_position)
			print("[ENEMY]       Player: ", player.name, " (", player.get_class(), ")")
			print("[ENEMY]       Posi√ß√£o Enemy: ", global_position)
			print("[ENEMY]       Posi√ß√£o Player: ", player.global_position)
			print("[ENEMY]       Dist√¢ncia: %.1f pixels" % distance)
			print("[ENEMY]       Chase Range: %.1f pixels" % enemy_data.chase_range)
			if distance <= enemy_data.chase_range:
				print("[ENEMY]       ‚úÖ Player EST√Å dentro do range! Deveria ter detectado!")
				print("[ENEMY]       ‚ö†Ô∏è BUG: DetectionArea n√£o est√° detectando apesar da dist√¢ncia correta!")
			else:
				print("[ENEMY]       ‚ö†Ô∏è Player est√° FORA do range")
	
	# Configura timer de ataque
	if attack_timer:
		attack_timer.wait_time = enemy_data.attack_cooldown
		attack_timer.one_shot = true
		attack_timer.timeout.connect(_on_attack_timer_timeout)
		print("[ENEMY]    AttackTimer configurado (cooldown: %.2fs)" % enemy_data.attack_cooldown)
	
	# Configura timer de flash de dano
	if hit_flash_timer:
		hit_flash_timer.wait_time = enemy_data.hit_flash_duration
		hit_flash_timer.one_shot = true
		hit_flash_timer.timeout.connect(_on_hit_flash_timeout)
		print("[ENEMY]    HitFlashTimer configurado (dura√ß√£o: %.2fs)" % enemy_data.hit_flash_duration)
	
	print("[ENEMY] ‚úÖ Configura√ß√£o completa! Estado inicial: IDLE")


func _physics_process(delta: float) -> void:
	if is_dead:
		return
	
	# Aplica velocidade de empurr√£o (decai com o tempo)
	if push_velocity.length() > 0.1:
		velocity += push_velocity
		push_velocity = push_velocity.lerp(Vector2.ZERO, push_decay * delta)
	
	match current_state:
		State.IDLE:
			process_idle()
		State.CHASE:
			process_chase(delta)
		State.ATTACK:
			process_attack()
		State.HURT:
			process_hurt()
	
	# Move o inimigo (importante: ap√≥s os estados aplicarem velocity)
	move_and_slide()


func process_idle() -> void:
	# Para de se mover
	velocity = Vector2.ZERO
	
	# Se tiver alvo, muda para chase
	if target and is_instance_valid(target):
		print("[ENEMY] Estado: IDLE ‚Üí CHASE (alvo detectado)")
		current_state = State.CHASE


func process_chase(_delta: float) -> void:
	if not target or not is_instance_valid(target):
		print("[ENEMY] Estado: CHASE ‚Üí IDLE (alvo perdido)")
		target = null
		current_state = State.IDLE
		return
	
	# Calcula dire√ß√£o para o alvo
	var direction = (target.global_position - global_position).normalized()
	
	# Move em dire√ß√£o ao alvo
	velocity = direction * enemy_data.move_speed
	
	# Flip horizontal baseado na dire√ß√£o
	if direction.x < 0:
		sprite.flip_h = true
	elif direction.x > 0:
		sprite.flip_h = false
	
	# Verifica dist√¢ncia para ataque
	var distance = global_position.distance_to(target.global_position)
	if distance <= enemy_data.attack_range:
		print("[ENEMY] Estado: CHASE ‚Üí ATTACK (dist√¢ncia: %.1f)" % distance)
		current_state = State.ATTACK
	
	move_and_slide()


func process_attack() -> void:
	# Para de se mover durante ataque
	velocity = Vector2.ZERO
	
	if not target or not is_instance_valid(target):
		print("[ENEMY] Estado: ATTACK ‚Üí IDLE (alvo perdido)")
		target = null
		current_state = State.IDLE
		return
	
	# Ataca se poss√≠vel
	if can_attack:
		perform_attack()
	
	# Verifica se alvo saiu do range
	var distance = global_position.distance_to(target.global_position)
	if distance > enemy_data.attack_range:
		print("[ENEMY] Estado: ATTACK ‚Üí CHASE (alvo fora do range)")
		current_state = State.CHASE


func process_hurt() -> void:
	# Estado de recuo/stun ap√≥s levar dano
	velocity = Vector2.ZERO
	# Volta para chase ap√≥s o flash
	await hit_flash_timer.timeout
	if not is_dead:
		# S√≥ volta para chase se tiver alvo
		if target and is_instance_valid(target):
			print("[ENEMY] Estado: HURT ‚Üí CHASE (flash terminado, alvo v√°lido)")
			current_state = State.CHASE
		else:
			print("[ENEMY] Estado: HURT ‚Üí IDLE (flash terminado, sem alvo)")
			current_state = State.IDLE


func perform_attack() -> void:
	can_attack = false
	print("[ENEMY] ‚öîÔ∏è ATACANDO! (can_attack = false)")
	
	# Toca anima√ß√£o de ataque se existir
	if sprite and enemy_data.sprite_frames.has_animation("attack"):
		sprite.play("attack")
		print("[ENEMY]    Anima√ß√£o 'attack' tocando")
	
	# Causa dano ao player (via hitbox collision)
	# O dano √© aplicado em _on_hitbox_body_entered
	
	# Inicia cooldown
	if attack_timer:
		attack_timer.start()
		print("[ENEMY]    Cooldown iniciado (%.2fs)" % attack_timer.wait_time)


func take_damage(amount: float) -> void:
	if is_dead:
		print("[ENEMY] ‚ö†Ô∏è Dano ignorado: inimigo j√° est√° morto")
		return
	
	# Aplica defesa
	var damage_taken = max(amount - enemy_data.defense, 1.0)
	current_health -= damage_taken
	
	print("[ENEMY] üíî %s RECEBEU DANO!" % enemy_data.enemy_name)
	print("[ENEMY]    Dano bruto: %.1f | Defesa: %.1f | Dano real: %.1f" % [amount, enemy_data.defense, damage_taken])
	print("[ENEMY]    HP atual: %.1f/%.1f (%.1f%%)" % [current_health, enemy_data.max_health, (current_health/enemy_data.max_health)*100])
	
	# Se for agressivo e n√£o tiver alvo, procura o player
	if enemy_data.behavior == "Aggressive" and not target:
		var players = get_tree().get_nodes_in_group("player")
		print("[ENEMY]    üîç Buscando players no grupo 'player': ", players.size(), " encontrado(s)")
		for p in players:
			print("[ENEMY]       - ", p.name, " (tipo: ", p.get_class(), ")")
		if players.size() > 0:
			target = players[0]
			print("[ENEMY]    üéØ Alvo definido ap√≥s dano: ", target.name, " (tipo: ", target.get_class(), ")")
			# Verifica se √© realmente o CharacterBody2D
			if target.get_class() != "CharacterBody2D":
				print("[ENEMY]    ‚ö†Ô∏è ALERTA: Alvo n√£o √© CharacterBody2D!")
	
	# Visual de dano (flash branco)
	apply_hit_flash()
	
	# Muda para estado HURT
	print("[ENEMY] Estado: ", State.keys()[current_state], " ‚Üí HURT")
	current_state = State.HURT
	
	# Verifica morte
	if current_health <= 0:
		print("[ENEMY] ‚ò†Ô∏è HP chegou a 0, iniciando morte...")
		die()


func apply_hit_flash() -> void:
	print("[ENEMY]    üî¥ Aplicando flash vermelho")
	if sprite and hit_flash_timer:
		sprite.modulate = Color(1, 0.5, 0.5)  # Vermelho
		hit_flash_timer.start()


func _on_hit_flash_timeout() -> void:
	if sprite:
		sprite.modulate = Color(1, 1, 1)  # Volta ao normal
		print("[ENEMY]    ‚úÖ Flash terminado")


func die() -> void:
	is_dead = true
	current_state = State.DEAD
	
	print("[ENEMY] ‚ò†Ô∏è‚ò†Ô∏è‚ò†Ô∏è %s MORREU! ‚ò†Ô∏è‚ò†Ô∏è‚ò†Ô∏è" % enemy_data.enemy_name)
	print("[ENEMY]    Exp drop: %d | Coins drop: %d" % [enemy_data.experience_drop, enemy_data.coin_drop])
	
	# Contabiliza inimigo derrotado
	if has_node("/root/GameStats"):
		get_node("/root/GameStats").enemy_defeated()
	
	# Toca anima√ß√£o de morte se existir
	if sprite and enemy_data.sprite_frames.has_animation(enemy_data.death_animation):
		sprite.play(enemy_data.death_animation)
		print("[ENEMY]    Anima√ß√£o de morte tocando...")
		await sprite.animation_finished
		print("[ENEMY]    Anima√ß√£o de morte terminada")
	
	# Drop de rewards (implementar depois)
	drop_rewards()
	
	# Remove da cena
	print("[ENEMY]    Removendo da cena (queue_free)")
	queue_free()


func drop_rewards() -> void:
	# TODO: Implementar sistema de drop (exp, moedas, itens)
	print("[ENEMY] üí∞ Dropando recompensas: %d exp e %d moedas" % [enemy_data.experience_drop, enemy_data.coin_drop])


# ===== SIGNALS DE DETEC√á√ÉO =====
func _on_detection_body_entered(body: Node2D) -> void:
	print("[ENEMY] üëÅÔ∏è DetectionArea detectou ENTRADA: ", body.name)
	print("[ENEMY]    Tipo do node: ", body.get_class())
	print("[ENEMY]    Grupos: ", body.get_groups())
	print("[ENEMY]    Behavior do enemy: ", enemy_data.behavior)
	print("[ENEMY]    Estado atual: ", State.keys()[current_state])
	print("[ENEMY]    Tem alvo atual? ", target != null)
	
	if body.is_in_group("player"):
		print("[ENEMY]    ‚úÖ Confirmado: √â o PLAYER!")
		if enemy_data.behavior == "Aggressive":
			print("[ENEMY]    ‚úÖ Sou AGRESSIVO! Definindo como alvo...")
			target = body
			if current_state == State.IDLE:
				print("[ENEMY]    Estado: IDLE ‚Üí CHASE")
				current_state = State.CHASE
			else:
				print("[ENEMY]    Estado j√° √©: ", State.keys()[current_state])
		else:
			print("[ENEMY]    ‚ö†Ô∏è N√£o sou agressivo (behavior: ", enemy_data.behavior, ")")
	else:
		print("[ENEMY]    ‚ö†Ô∏è N√ÉO √© o player")


func _on_detection_body_exited(body: Node2D) -> void:
	print("[ENEMY] üëÅÔ∏è DetectionArea saiu: ", body.name)
	if body == target:
		print("[ENEMY]    Era meu alvo! Perdendo alvo e voltando para IDLE")
		target = null
		current_state = State.IDLE


# ===== SISTEMA DE EMPURR√ÉO =====
# Retorna a for√ßa de resist√™ncia ao empurr√£o deste inimigo
func get_push_force() -> float:
	if enemy_data:
		return enemy_data.push_force
	return 0.0  # N√£o pode ser empurrado se n√£o tiver data


# Aplica um empurr√£o ao inimigo
var push_velocity: Vector2 = Vector2.ZERO
var push_decay: float = 5.0  # Qu√£o r√°pido o empurr√£o diminui

func apply_push(push_direction: Vector2, push_power: float) -> void:
	# Adiciona velocidade de empurr√£o
	push_velocity = push_direction * push_power
	print("[ENEMY] üí® Empurrado! Dire√ß√£o: ", push_direction, " For√ßa: ", push_power)


# ===== HITBOX (DANO AO PLAYER) =====
func _on_hitbox_body_entered(body: Node2D) -> void:
	print("[ENEMY] üí• Hitbox colidiu com: ", body.name)
	print("[ENEMY]    Grupos: ", body.get_groups())
	print("[ENEMY]    can_attack: ", can_attack)
	
	if body.is_in_group("player") and can_attack:
		print("[ENEMY]    ‚úÖ √â o player e pode atacar!")
		# Aplica dano ao player
		if body.has_method("take_damage"):
			print("[ENEMY]    üí• Causando %.1f de dano no player!" % enemy_data.damage)
			body.take_damage(enemy_data.damage)
			print("[ENEMY]    ‚úÖ Dano aplicado com sucesso")
		else:
			print("[ENEMY]    ‚ö†Ô∏è Player n√£o tem m√©todo take_damage()")
	else:
		if not body.is_in_group("player"):
			print("[ENEMY]    ‚ö†Ô∏è N√£o √© o player")
		if not can_attack:
			print("[ENEMY]    ‚ö†Ô∏è Ainda em cooldown")


func _on_attack_timer_timeout() -> void:
	can_attack = true
	print("[ENEMY] ‚è±Ô∏è Cooldown de ataque terminado (can_attack = true)")
	
	# Volta para anima√ß√£o idle/walk
	if sprite and enemy_data.animation_name != "":
		sprite.play(enemy_data.animation_name)
		print("[ENEMY]    Voltando para anima√ß√£o: ", enemy_data.animation_name)
